# LearningFastAPI

./: Dockerfile  celerybeat-schedule.db  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt
app/: config.py  database.py  exceptions.py  main.py
app/admin/: views.py
app/bookings/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py  schemas.py
app/hotels/rooms/: dao.py  models.py  router.py  schemas.py
app/images/: router.py
app/importer/: dao.py  router.py
app/migrations/: env.py
app/migrations/versions/: 1b70e6724a4b_git_migration.py  365e94cca6a7_initial_migration.py  7b97e03558a4_initial_migration.py  b2510fc2392c_migration.py  e99e024d1ad4_git_migration2.py
app/pages/: router.py
app/tasks/: celery_app.py  scheduled.py  tasks.py
app/templates/: hotels.html
app/tests/: conftest.py
app/tests/integration_tests/test_bookings/: test_api_bookings.py  test_dao_integration_booking.py  test_db_mine.py
app/tests/integration_tests/test_users/: test_api_users.py
app/tests/unit_tests/test_users/: test_dao_unit_users.py
app/users/: auth.py  dependencies.py  models.py  router.py
