[tool.poetry]
name = "learningfastapi"
version = "0.1.0"
description = ""
authors = ["kirillkorablev <kirill.korablev.2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "[3.10]"
fastapi = {extras = ["all"], version = "^0.109.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.autoflake]
check_diff = true
imports = ["sqlalchemy", "app"]

[tool.pyright]
include = ["app"]